webinterface/public/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.cdnfonts.com/css/terminal');

html, body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

#dashboard-header {
    color: #ffffff;
    text-align: center;
    user-select: none;
    font-size: 60px;
}

/* Arrow rotation */

.buttonUp {
    rotate: 180deg;
}

.buttonLeft {
    rotate: 90deg;
}

.buttonRight {
    rotate: 270deg;
}

/* ---------------- */

.flex-content-centered {
    display: flex;

    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.button-wrapper {
    min-width: fit-content;
    margin: 10px;
    border-radius: 15px;
    background-color: rgb(51, 51, 51);
    padding: 20px;
    cursor: pointer;
    border: 2px solid rgb(156, 46, 46);
}

.panel-active {
    border: 2px solid rgb(46, 156, 48);
}

.button-wrapper:hover {
    background-color: rgb(46, 46, 46);
}

.button-panel-container {
    width: fit-content;
    margin-top: 10px;
    margin-bottom: 10px;
}

#connection-status-wrapper {
    flex-direction: row;
    background-color: rgb(140, 140, 140);
    width: fit-content;
    max-width: 100%;
    padding: 5px;
    margin: 5px;
    border: 2px solid black;

    border-radius: 15px;

    cursor: pointer;

    user-select: none;
}

#connection-status-wrapper:hover {
    background-color: rgb(96, 96, 96);
}

#connection-status-wrapper:active {
    background-color: rgb(114, 114, 114);
}

#connection-status-icon {
    width: 15px;
    height: 15px;
    background-color: red;
    border-radius: 50%;
    border: 2px solid black;

    margin-right: 5px;
}

#controls {
    margin: 0;
}

#connection-status {
    margin: 0;
}

.button-panel-container img {
    height: 100%;
    width: 100%;
}

.arrow-button {
    cursor: not-allowed;

    padding: 0;
    margin: 5px;
    height: 8vh;
}

.arrow-button {
    background-color: rgba(0, 0, 0, 0);
    border: rgba(255, 255, 255, 1) solid 2px;
}

#input-wrapper {
    width: 100%;
}

#address-input {
    border: 2px solid black;
    user-select: none;
    margin: 5px;
    width: auto;
    height: fit-content;
    color: white;
    padding: 5px;
    border-radius: 5px;
}

#address-input input {
    box-sizing: border-box;
    width: 100%;
}

#button-panels-wrapper {
    flex-direction: row;
    flex-wrap: wrap;
}

.initial-button-panel {
    visibility: hidden;
    position: absolute;
}

.controls {
    user-select: none;
}

.button-name-p {
    user-select: none;
}

.button-name {
    user-select: all;
}

.button-active {
    border: rgba(255, 255, 255, 0.2) solid 2px;
}

#content-wrapper {
    display: flex;
    flex-direction: row;
}

#information-interface {
    height: 100vh;
    background-color: rgb(69, 69, 69);
    overflow: visible;
    display: flex;
    flex-direction: column;
}

#console {
    background-color: black;
    width: 100%;
    height: 40%;
    margin-top: auto;
    color: rgb(0, 176, 0);
    display: flex;
    flex-direction: column;
    overflow: scroll;
    font-family: 'Terminal', sans-serif;
}

.console-item {
    display: flex;
    align-items: left;
    width: auto;
    height: fit-content;
    padding: 0;
    margin: 3px;
}

.console-item p {
    margin-top: 0px;
    margin-bottom: 0px;
}

.console-item-msg {
    margin-left: 5px;
    color: rgb(255, 255, 255);
}

#main-interface {
    height: 100vh;
    flex-grow: 1;
    background-color: rgb(38, 38, 38);
}

